<?xml version="1.0"?>
<package format="2">
  <name>jackal_slam</name>
  <version>1.2.5</version>
  <description>
    The jackal_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <author>Leon Jung</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_slam</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>


  <exec_depend>rviz</exec_depend>
</package>
